GitHub composite needs local files to be in the ./ format Well, at least I think so. The way it is now it will complain about the format being wrong. Examples use files in the current directory so thought maybe it needs this. If this doesn't work it probably means that you're only allowed to include files in the current directory. This might be of security reasons? One way to find out. Some notes do mention that you need to do a checkout action before, but in this case that would checkout the repository that calls these actions. Maybe there is some way to circumvent that, but I would hate to use a hack.

--- a/events/push-event-action/action.yml
+++ b/events/push-event-action/action.yml
@@ -30,29 +30,29 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: ../../common/checkout-java.yml
+    - uses: ./../../common/checkout-java.yml
       with:
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
         JDK_VERSION: ${{ inputs.JDK_VERSION }}
 
-    - uses: ../../common/cache-sonar-packages.yml
+    - uses: ./../../common/cache-sonar-packages.yml
 
-    - uses: ../../common/cache-maven-packages.yml
+    - uses: ./../../common/cache-maven-packages.yml
 
-    - uses: ../../common/build-and-analyse-using-maven-and-sonar.yml
+    - uses: ./../../common/build-and-analyse-using-maven-and-sonar.yml
       with:
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ inputs.SONAR_TOKEN }}
         ROOT_POM_DIRECTORY: ${{ inputs.ROOT_POM_DIRECTORY }}
 
     - id: get-project-version
-      uses: ../../common/get-maven-project-version.yml
+      uses: ./../../common/get-maven-project-version.yml
       with:
         ROOT_POM_DIRECTORY: ${{ inputs.ROOT_POM_DIRECTORY }}
 
     # Artifacts should only be published on pushes with a SNAPSHOT version
     - if: endsWith(steps.get_maven_project_version.outputs.version, '-SNAPSHOT')
-      uses: ../../common/publish-maven-artifacts.yml
+      uses: ./../../common/publish-maven-artifacts.yml
       with:
         NEXUS_USERNAME: ${{ inputs.NEXUS_USERNAME }}
         NEXUS_PASSWORD: ${{ inputs.NEXUS_PASSWORD }}
