--- a/events/pull_request-event-action/action.yml
+++ b/events/pull_request-event-action/action.yml
@@ -17,14 +17,14 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: ../../common/checkout-java.yml
+    - uses: ./../../common/checkout-java.yml
       with:
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
         JDK_VERSION: ${{ inputs.JDK_VERSION }}
 
-    - uses: ../../common/cache-maven-packages.yml
+    - uses: ./../../common/cache-maven-packages.yml
 
-    - uses: ../../common/build-using-maven.yml
+    - uses: ./../../common/build-using-maven.yml
       with:
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
         ROOT_POM_DIRECTORY: ${{ inputs.ROOT_POM_DIRECTORY }}
