--- a/events/release-event-action/action.yml
+++ b/events/release-event-action/action.yml
@@ -30,22 +30,22 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: ./../../common/checkout-java.yml
+    - uses: ./common/checkout-java.yml
       with:
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
         JDK_VERSION: ${{ inputs.JDK_VERSION }}
 
-    - uses: ./../../common/cache-sonar-packages.yml
+    - uses: ./common/cache-sonar-packages.yml
 
-    - uses: ./../../common/cache-maven-packages.yml
+    - uses: ./common/cache-maven-packages.yml
 
-    - uses: ./../../common/build-and-analyse-using-maven-and-sonar.yml
+    - uses: ./common/build-and-analyse-using-maven-and-sonar.yml
       with:
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ inputs.SONAR_TOKEN }}
         ROOT_POM_DIRECTORY: ${{ inputs.ROOT_POM_DIRECTORY }}
 
-    - uses: ./../../common/publish-maven-artifacts.yml
+    - uses: ./common/publish-maven-artifacts.yml
       with:
         NEXUS_USERNAME: ${{ inputs.NEXUS_USERNAME }}
         NEXUS_PASSWORD: ${{ inputs.NEXUS_PASSWORD }}
