--- a/common/checkout-java/action.yml
+++ b/common/checkout-java/action.yml
@@ -12,7 +12,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: ./aerius-github-actions/common/checkout.yml
+    - uses: ./aerius-github-actions/common/checkout
       with:
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
 
