Checkout parent repository as `repo/` and use this as the default

--- a/events/pull_request-event-action/action.yml
+++ b/events/pull_request-event-action/action.yml
@@ -8,7 +8,7 @@ inputs:
    ROOT_POM_DIRECTORY:
      required: false
      description: "The directory where the root POM can be found."
-     default: "."
+     default: "repo"
    JDK_VERSION:
      required: false
      description: "The version of the JDK to setup."
