--- a/extras/docker-publish-action/action.yml
+++ b/extras/docker-publish-action/action.yml
@@ -21,11 +21,11 @@ inputs:
    DOCKERFILE_DIRECTORY:
      required: false
      description: "The directory where the Dockerfile can be found."
-     default: "."
+     default: "repo"
    ROOT_POM_DIRECTORY:
      required: false
      description: "The directory where the root POM can be found."
-     default: "."
+     default: "repo"
    JDK_VERSION:
      required: false
      description: "The version of the JDK to setup."
