--- a/events/push-event-action/action.yml
+++ b/events/push-event-action/action.yml
@@ -51,7 +51,7 @@ runs:
         ROOT_POM_DIRECTORY: ${{ inputs.ROOT_POM_DIRECTORY }}
 
     # Artifacts should only be published on pushes with a SNAPSHOT version
-    - if: endsWith(steps.get_maven_project_version.outputs.version, '-SNAPSHOT')
+    - if: endsWith(steps.get-project-version.outputs.version, '-SNAPSHOT')
       uses: ./aerius-github-actions/common/publish-maven-artifacts
       with:
         NEXUS_USERNAME: ${{ inputs.NEXUS_USERNAME }}
