--- a/common/publish-maven-artifacts/action.yml
+++ b/common/publish-maven-artifacts/action.yml
@@ -24,5 +24,5 @@ runs:
         server_id: ${{ inputs.POM_PUBLISH_REPOSITORY_NAME }}
         nexus_username: ${{ inputs.NEXUS_USERNAME }}
         nexus_password: ${{ inputs.NEXUS_PASSWORD }}
-        maven_args: -DskipTests --no-transfer-progress -P publish -f ${{ inputs.ROOT_POM_DIRECTORY }}/pom.xml
+        maven_args: -DskipTests -P publish -f ${{ inputs.ROOT_POM_DIRECTORY }}/pom.xml
 
