[get-maven-project-version] Echo maven project version This will make debugging easier when needed.

--- a/common/get-maven-project-version/action.yml
+++ b/common/get-maven-project-version/action.yml
@@ -20,4 +20,5 @@ runs:
       run: |
         VERSION=$(mvn -Dexpression=project.version -q -DforceStdout -f ${{ inputs.ROOT_POM_DIRECTORY }}/pom.xml help:evaluate 2>/dev/null)
         echo "::set-output name=version::${VERSION}"
+        echo "The maven project version is: ${VERSION}"
 
