--- a/extras/docker-build-action/action.yml
+++ b/extras/docker-build-action/action.yml
@@ -2,16 +2,20 @@ name: "Build Docker images for a generic AERIUS project"
 description: "Build Docker images for a AERIUS project"
 
 inputs:
-   GITHUB_TOKEN:
-     required: true
-     description: "Just pass the secrets.GITHUB_TOKEN to this action as input."
-   DOCKER_IMAGE_NAME:
-     required: true
-     description: "The Docker image name to use when building."
-   DOCKERFILE_DIRECTORY:
-     required: false
-     description: "The directory where the Dockerfile can be found."
-     default: "repo"
+  GITHUB_TOKEN:
+    required: true
+    description: "Just pass the secrets.GITHUB_TOKEN to this action as input."
+  DOCKER_IMAGE_NAME:
+    required: true
+    description: "The Docker image name to use when building."
+  DOCKER_WORK_DIRECTORY:
+    required: false
+    description: "The Docker work directory."
+    default: "repo"
+  DOCKERFILE_LOCATION:
+    required: false
+    description: "The location of the Dockerfile inside the Docker work directory".
+    default: "Dockerfile"
 
 runs:
   using: "composite"
@@ -24,6 +28,7 @@ runs:
       uses: elgohr/Publish-Docker-Github-Action@v4
       with:
         name: ${{ inputs.DOCKER_IMAGE_NAME }}
-        workdir: ${{ inputs.DOCKERFILE_DIRECTORY }}/
+        workdir: ${{ inputs.DOCKER_WORK_DIRECTORY }}/
+        dockerfile: ${{ inputs.DOCKERFILE_LOCATION }}
         no_push: true
 
