Dots should be inside the quotation marks

--- a/extras/docker-build-or-publish-based-on-maven-project-version-action/action.yml
+++ b/extras/docker-build-or-publish-based-on-maven-project-version-action/action.yml
@@ -24,7 +24,7 @@ inputs:
     default: "repo"
   DOCKERFILE_LOCATION:
     required: false
-    description: "The location of the Dockerfile inside the Docker work directory".
+    description: "The location of the Dockerfile inside the Docker work directory."
     default: "Dockerfile"
   ROOT_POM_DIRECTORY:
     required: false
