--- a/extras/docker-build-action/action.yml
+++ b/extras/docker-build-action/action.yml
@@ -14,7 +14,7 @@ inputs:
     default: "repo"
   DOCKERFILE_LOCATION:
     required: false
-    description: "The location of the Dockerfile inside the Docker work directory".
+    description: "The location of the Dockerfile inside the Docker work directory."
     default: "Dockerfile"
 
 runs:
