Only fail on test failures if it's a release For pushes and PR's it won't fail but you can see that it is failing in the logging.

--- a/events/pull_request-event-action/action.yml
+++ b/events/pull_request-event-action/action.yml
@@ -28,4 +28,5 @@ runs:
       with:
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
         ROOT_POM_DIRECTORY: ${{ inputs.ROOT_POM_DIRECTORY }}
+        FAIL_ON_TEST_FAILURES: false
 
