Remove usage of deprecated `set-output` command This command will stop working as of the first of June. Replaced by using the new output environment file.

--- a/common/get-maven-project-version/action.yml
+++ b/common/get-maven-project-version/action.yml
@@ -19,6 +19,5 @@ runs:
       shell: bash
       run: |
         VERSION=$(mvn -Dexpression=project.version -q -DforceStdout -f ${{ inputs.ROOT_POM_DIRECTORY }}/pom.xml help:evaluate 2>/dev/null)
-        echo "::set-output name=version::${VERSION}"
+        echo "version=${VERSION}" >> $GITHUB_OUTPUT
         echo "The maven project version is: ${VERSION}"
-
