--- a/events/push-event-action/action.yml
+++ b/events/push-event-action/action.yml
@@ -25,7 +25,11 @@ inputs:
   JDK_VERSION:
     required: false
     description: "The version of the JDK to setup."
-    default: 11
+    default: 17
+  IGNORE_TEST_FAILURES:
+    required: false
+    description: "Allow tests to fail."
+    default: false
 
 runs:
   using: "composite"
@@ -44,7 +48,7 @@ runs:
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ inputs.SONAR_TOKEN }}
         ROOT_POM_DIRECTORY: ${{ inputs.ROOT_POM_DIRECTORY }}
-        IGNORE_TEST_FAILURES: true
+        IGNORE_TEST_FAILURES: ${{ inputs.IGNORE_TEST_FAILURES }}
 
     - id: get-project-version
       uses: ./aerius-github-actions/common/get-maven-project-version
