Don't allow ignoring of tests when releasing

--- a/events/release-event-action/action.yml
+++ b/events/release-event-action/action.yml
@@ -26,10 +26,6 @@ inputs:
      required: false
      description: "The version of the JDK to setup."
      default: 17
-  IGNORE_TEST_FAILURES:
-    required: false
-    description: "Allow tests to fail."
-    default: false
 
 runs:
   using: "composite"
@@ -48,7 +44,7 @@ runs:
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ inputs.SONAR_TOKEN }}
         ROOT_POM_DIRECTORY: ${{ inputs.ROOT_POM_DIRECTORY }}
-        IGNORE_TEST_FAILURES: ${{ inputs.IGNORE_TEST_FAILURES }}
+        IGNORE_TEST_FAILURES: false
 
     - uses: ./aerius-github-actions/common/publish-maven-artifacts
       with:
